Custom exceptions, log4j2 config, validators, some arrangements for product service